Restructured index to use haml & fixed image not showing

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -45,8 +45,7 @@
 }
 
 #callouts {
-	background-image: image-url("callout_background.jpg");
-	background-size: cover;
+	background-image: url("https://github.com/CrashLearner/FileCabinet/blob/master/Images%20for%20FileCabinet/callout_backgroung.jpg?raw=true");
 	background-repeat: no-repeat;
 	background-position: top center;
 	width: 100%;
